# valence-coordinator-sdk

./: Cargo.toml  README.md
docs/: overview.md  quickstart.md
examples/: .env.example
examples/minimal/: .env.example  README.md  main.rs
src/: lib.rs
src/coordinator/: mod.rs
src/core/: cw.rs
src/integrations/mars/: mod.rs
src/telemetry/: mod.rs
