[package]
authors = ["Timewave Labs"]
name = "valence-coordinator-sdk"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "SDK for building off-chain Valence Protocol program coordinators"
repository = "https://github.com/timewave-computer/valence-coordinator-sdk"

# for now this is structured as a single crate for faster iteration.
# in the future (once this becomes stable) this may become a workspace with subcrates.

[dependencies]

# general top level
anyhow = "1"
async-trait = "0.1.88"
hex = "0.4.3"
toml = "0.8"
bincode = "1.3.3"

# cosmos
cosmrs = "0.21.1"
cosmwasm-std = "2.1.3"

# evm
alloy = { version = "0.9.2", features = ["full"] }
