[package]
authors = ["Timewave Labs"]
name = "valence-coordinator-sdk"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "SDK for building off-chain Valence Protocol program coordinators"
repository = "https://github.com/timewave-computer/valence-coordinator-sdk"

# for now this is structured as a single crate for faster iteration.
# in the future (once this becomes stable) this may become a workspace with subcrates.

[dependencies]

# general top level
anyhow = "1"
async-trait = "0.1.88"
hex = "0.4.3"
toml = "0.8"
bincode = "1.3.3"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
log = "0.4.22"
env_logger = "0.10.0"

# cosmos
cosmrs = "0.21.1"
cosmwasm-std = "2.1.3"
# todo: import this from crates.io once possible
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", tag = "v1.0.0" }

# evm
alloy = { version = "0.9.2", features = ["full"] }
