[package]
authors = ["Timewave Labs"]
name = "valence-coordinator-sdk"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "SDK for building off-chain Valence Protocol program coordinators"
repository = "https://github.com/timewave-computer/valence-coordinator-sdk"

# for now this is structured as a single crate for faster iteration.
# in the future (once this becomes stable) this may become a workspace with subcrates.

[dependencies]

# general top level
anyhow = { version = "1", default-features = false }
async-trait = "0.1.88"
hex = "0.4.3"
toml = "0.8"
bincode = "1.3.3"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
log = "0.4.22"
env_logger = "0.10.0"

# telemetry
multi_log = "0.1.2"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry-stdout = "0.30.0"
opentelemetry-appender-log = "0.30.0"

# cosmos
cosmwasm-std = "2.1.3"
# todo: import this from crates.io once possible
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", tag = "v1.0.0" }

# evm
alloy = { version = "0.9.2", features = ["full"] }

# valence-coprocessor
valence-coprocessor = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.12", default-features = false }
valence-coprocessor-wasm = { git = "https://github.com/timewave-computer/valence-coprocessor.git", tag = "v0.3.12", default-features = false }

# valence-protocol
valence-authorization-utils = { git = "https://github.com/timewave-computer/valence-protocol", rev = "062a77e" }
valence-processor-utils = { git = "https://github.com/timewave-computer/valence-protocol", rev = "062a77e" }
valence-lending-utils = { git = "https://github.com/timewave-computer/valence-protocol", rev = "062a77e" }
